--- a/IC-7610.Rmd
+++ b/IC-7610.Rmd
@@ -9,16 +9,16 @@ output: html_document
 
 ### Equipment summary
 
-- Icom IC-7610 (HF + 6m)
-    - Astron power supply
+- Icom IC-7610 (HF + 6m) transceiver
+    - Astron RS-35A power supply
 - Elecraft KPA1500
   - Elecraft power supply
-- Windows 10 PC, dual monitor set-up
-  - WSTJ-X, JS8Call, fldigi, N1MM, N3FJP
 - The default configuration uses the ICOM SM-50 desk mic.
 - Clipper footswitch for the PTT on the floor.
 - Heil headset.
-- We have a Nifty Mini-manual and other manuals are located in the drawer under the radio.
+- Nifty mini-manual and other manuals are located in the drawer under the radio.
+- Windows 10 PC, dual monitor set-up
+  - WSTJ-X, JS8Call, fldigi, N1MM, N3FJP
 
 ### Connect equipment and power-up
 
