--- a/IC-7610.Rmd
+++ b/IC-7610.Rmd
@@ -5,7 +5,18 @@ date: "`r Sys.time()`"
 output: html_document
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "600px")
+```
+
 ## IC-7610 HF Transceiver
+
+```{r, fig.cap=""}
+knitr::include_graphics("img/ic-7610.jpg")
+```
 
 ### Equipment summary
 
@@ -13,32 +24,99 @@ output: html_document
     - Astron RS-35A power supply
 - Elecraft KPA1500
   - Elecraft power supply
-- The default configuration uses the ICOM SM-50 desk mic.
-- Clipper footswitch for the PTT on the floor.
-- Heil headset.
+- Icom SM-50 desk mic
+- Clipper PTT footswitch
+- Heil Pro-7 headset
 - Nifty mini-manual and other manuals are located in the drawer under the radio.
-- Windows 10 PC, dual monitor set-up
-  - WSTJ-X, JS8Call, fldigi, N1MM, N3FJP
+- Dell PC, dual monitor set-up
+  - Windows 10
+  - WSTJ-X, JS8Call, fldigi suite
+  - N1MM, N3FJP
 
 ### Connect equipment and power-up
 
-- The IC-7610 is located closest to the door.
-- Connect the equipment to the power mains.
-    - Plug the large 240 V cable for the amplifier into the 240 V wall outlet.
-    - Plug the smaller 120 V cable for the Uninterrupted Power Supply (UPS) into the wall outlet.
-- Power up the UPS by pushing the front button.
-    - If needed, power up the PC.
-- Power up the Astron RS-35A power supply that powers the IC-7610. The power supply is located to the right of the Elecraft KPA1500 amplifier.
+- The IC-7610 is located closest to the main door off the porch.
+- Connect to the power mains.
+    - Cables are located between the wooden shelf and the east wall.
+    - Plug the large 240 V cable (green tag) for the amplifier power supply into the 240 V wall outlet.
+    - Plug the smaller 120 V cable for the Uninterrupted Power Supply (UPS) into the 120 V wall outlet.
+- Power up the UPS by pushing the front button. The green power light should illuminate.
+    - If needed, power up the PC by pressing the button on the front panel.
+- Power up the Astron RS-35A power supply that powers the IC-7610. 
+The power supply is located to the right of the Elecraft KPA1500 amplifier.
 - Before you power up the radio, connect it to a suitable antenna.
     - The antenna connections are located on the north wall, near the repeater cabinet.
-    - Plug the cable from the radio (yellow tag) into the cable connector for one of the antennas, for example, one of the triband Yagi's for 10 - 20 m.
+    - Plug the cable from the radio (yellow tag with IC-7610 on the label) into the cable connector for one of the antennas, for example, one of the triband Yagis for 10-20 m.
 - Power up the IC-7610 by pressing and briefly holding the power button.
-- The IC-7610 is connected to the Elecraft KPA1500 amplifier. The power supply for the KPA1500 is under the desk on a small footstool. Check that the KPA1500 power supply is on. If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply.
-- Power up the KPA1500 by pressing the on switch on the lower right hand side of the KPA1500.
+
+```{r, fig.cap="IC-7610 power switch"}
+knitr::include_graphics("img/ic-7610-power-switch.png")
+```
+
+- The IC-7610 is connected to the Elecraft KPA1500 amplifier. The power supply for the KPA1500 is under the desk on a small footstool. Check that the KPA1500 power supply is on. If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply.
+- Power up the KPA1500 by pressing the `on` switch on the lower right hand side of the KPA1500 front panel.
+
+```{r, fig.cap="KPA1500 Power Switch"}
+knitr::include_graphics("img/kpa1500-power-switch.png")
+```
 
 #### Log-in to the computer
 
-- The IC-7610 is connected via USB to the NARC-1 PC.
+- The IC-7610 is connected via USB to the NARC1 PC.
 - Open your logging program of choice. NARC has licenses for N1MM and N3FJP's Amateur Contact Log.
 - To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. 
 See instructions for operating these modes in separate documents.
+
+### Basic controls
+
+- Audio levels for the two VFOs are controlledd via separate knobs on the left side of the front panel.
+
+```{r}
+knitr::include_graphics("img/ic-7610-af.png")
+```
+
+- You may switch operating bands in one of two ways:
+    - Buttons located on the right side of the front panel
+    - Pressing the frequency on the touch screen.
+
+```{r}
+knitr::include_graphics("img/ic-7610-chg-band.png")
+```
+
+- Switch operating modes by pressing the mode button on the touch panel. 
+
+```{r}
+knitr::include_graphics("img/ic-7610-chg-mode.png")
+```
+
+This opens a window where you can choose the mode of operation.
+    - Hit the arrow button to close the window and save your choice.
+    
+- Turn digital noise reduction on or off by pressing the NR button on the left side of the front panel. 
+When NR is on, the NR button will be illuminated.
+    - To adjust the amount of noise reduction, press and hold the NR button to open a window on the upper right corner of the touch panel display.
+    - Turn the MULTI key to adjust the level of noise reduction.
+    - Close the NR window by pressing the MULTI key or by pressing the NR button.
+- Adjust preamplifier (`P.AMP`) settings, automatic gain control (`AGC`), Intercept Point (`IP+`), `VOX`, and compression (`COMP`) settings by pressing the corresponding button on the left side of the touch/display screen.
+
+```{r}
+knitr::include_graphics("img/ic-7610-left-touch-buttons.png")
+```
+
+- Adjust touch/display screen settings via the MENU1/MENU2 buttons at the bottom of the touch/display screen.
+
+```{r}
+knitr::include_graphics("img/ic-7610-menu-touch-buttons.png")
+```
+
+- Select receive filter settings via the `FILTER` button on the right side of the front panel, below the `TWIN PBT` knob.
+
+```{r}
+knitr::include_graphics("img/ic-7610-filter.png")
+```
+
+- Set RF power by pressing the MULTI button to open a window on the display/touch screen. Press the RF POWER panel to select it, and adjust the output power by turning the MULTI knob.
+
+```{r}
+knitr::include_graphics("img/ic-7610-multi.png")
+```
