--- a/elecraft-k3s.Rmd
+++ b/elecraft-k3s.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
                       message = FALSE,
                       fig.align = "center",
-                      out.width = "600px")
+                      out.width = "6.5in")
 ```
 
 ## Elecraft K3S
@@ -17,6 +17,9 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE,
 ```{r}
 knitr::include_graphics("img/elecraft-k3s.jpg")
 ```
+
+The K3S is currently connected to the NARC2 computer.
+The Elecraft K3S/NARC2 is located in the middle of the long desk to the right of the IC-7610/NARC1 station.
 
 ### Equipment summary
 
@@ -33,20 +36,60 @@ knitr::include_graphics("img/elecraft-k3s.jpg")
 
 ### Connect and power-up
 
-- Connect the UPS to the wall power outlet.
-    - The UPS is on the window sill behind the station. 
-    The power cable has an orange tag.
-- Press and hold the UPS POWER button until you hear 2 beeps.
-- Connect the 240 V Elecraft KPA1500 power supply cable to the 240 V outlet.
-The power cable has an orange tag.
-- Power up the Astron RS-35A power supply by pressing the red 'on' switch on the lower left front part of the panel.
-- Power up the K3S.
-    - The POWER button is on the left side of the left side of the rig front panel.
-- Power up the P3 Panadapter.
-This step is mandatory!
-- Power up the KPA1500 by pressing the 'ON' switch on the lower right panel.
+1. Connect to the power mains.
+
+Power cables are located between the wooden shelf and the east wall. 
+Plug the large 240 V cable (orange tag) for the amplifier power supply into the 240 V wall outlet.
+The UPS is located on the window sill behind the NARC2 station.
+Plug the smaller 120 V cable for the Uninterrupted Power Supply (UPS) into the 120 V wall outlet.
+  
+2. Connect the radio to a suitable antenna.
+
+**Before you power up the radio, connect it to a suitable antenna**.
+**The antenna connections are located on the north wall, near the repeater cabinet**.
+Choose the PL-259 connector with the orange K3S tag.
+Plug the cable from the radio into the cable connector for one of the antennas, for example, one of the triband Yagis for 10-20 m.
+**Please do not remove the N/PL-259 connectors from the antenna feedlines.**
+    
+3. Power up the UPS.
+
+Press and hold the UPS POWER button until you hear 2 beeps.
+
+4. Power up the Astron RS-35A power supply 
+
+The power supply is located to the far right of the NARC2 station.
+Press the red 'on' switch on the lower left front part of the panel. 
+
+5. Power up the K3S.
+
+The POWER button is on the left side of the left side of the rig front panel.
+
+6. Power up the P3 Panadapter.
+
+**This step is mandatory!**
+The K3S will not transmit if the P3 is not powered up.
+  
+6. Power up the Elecraft KPA1500 amplifier
+
+The IC-7610/NARC1 is connected to the Elecraft KPA1500 amplifier. 
+The power supply for the KPA1500 is under the desk on a small footstool. 
+Check that the KPA1500 power supply is on. 
+If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply.
+Power up the KPA1500 by pressing the `on` switch on the lower right hand side of the KPA1500 front panel.
 
 ```{r, fig.cap="KPA1500 Power Switch"}
 knitr::include_graphics("img/kpa1500-power-switch.png")
 ```
 
+#### Log-in to the computer
+
+1. Power up the NARC2 PC by pressing the power button on the front panel.
+
+2. Log-in using the appropriate password
+
+The K3S/NARC2 is connected via USB2 to the NARC2 PC.
+Open your logging program of choice. 
+NARC has licenses for N1MM and N3FJP's Amateur Contact Log.
+
+To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. 
+See instructions for operating these modes in separate documents.
