--- a/KPA1500.Rmd
+++ b/KPA1500.Rmd
@@ -5,6 +5,13 @@ date: "`r Sys.time()`"
 output: html_document
 ---
 
+```{r, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "6.5in")
+```
+
 ## Elecraft KPA1500
 
 ```{r}
