--- a/SSB-IC-7610.Rmd
+++ b/SSB-IC-7610.Rmd
@@ -6,67 +6,33 @@ output: html_document
 ---
 
 ```{r, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "6.5in")
 ```
 
-### SSB on IC-7610
+### SSB on IC-7610/NARC1
 
 #### On the PC
 
-<!-- 1. Open fldigi. (Icon is on desktop.) -->
+You do not need to use the PC to operate phone, but you may want to use the PC for logging.
 
-<!-- Fldigi is configured to use the flrig program to interface between the radio and the computer. Flrig should open automatically a few seconds after fldigi opens. If flrig shows the current VFO frequency and so does fldigi, the two devices are talking to one another. -->
+1. Power up the NARC2 PC by pressing the power button on the front panel.
 
-<!-- 2. Confirm Settings -->
+2. Log-in using the appropriate password
 
-<!-- It’s not essential to confirm the settings each time you start up, but doing so will make sure that you are able to operate without difficulty. -->
+The K3S/NARC2 is connected via USB2 to the NARC2 PC.
+Open your logging program of choice. 
+NARC has licenses for N1MM and N3FJP's Amateur Contact Log.
 
-<!-- *General tab:* -->
+##### N1MM
 
-<!-- Set my Call to your personal callsign unless you have permission to use the club callsign (W3YA).  -->
-<!-- Set any Display or Behavior settings per your personal preferences. -->
+**Please do not update N1MM without asking Mike N3LI, Rick K3ROG, Eric W3EDP first.**
 
-<!-- *Radio tab:* -->
+##### Amateur Contact Log (N3FJP)
 
-<!-- Rig: Icom IC-7610</br> -->
-<!-- CAT Control: COM3</br> -->
-<!-- Baud Rate: 19200</br> -->
-<!-- 8 bits, 1 stop bit, none</br> -->
-
-<!-- Force Control Lines: unset -->
-
-<!-- PTT method: CAT (port should be COM3)</br> -->
-<!-- Mode: Data/pkt</br> -->
-<!-- Split operation: Rig or Fake It</br> -->
-
-<!-- You may want to check/confirm that rig control is working by pushing the button in this panel.  -->
-<!-- You may also want to check that PTT is working by pressing the PTT button.  -->
-<!-- Make sure you have adjusted the rig’s power output to a low level (1-5 W) before testing. -->
-
-<!-- *Audio tab:* -->
-
-<!-- Input: USB Audio Codec -->
-<!-- Output: USB Audio Codec -->
-
-<!-- *Advanced tab:* -->
-
-<!-- Check or uncheck Special Operating Activity per situation, for example ARRL Field Day or the NA VHF Contest. -->
-
-<!-- You may now close the Settings window. -->
-
-<!-- Switch to the desired mode (e.g., FT8) from the Mode menu. -->
-<!-- Select the desired operating band and default frequency from the dropdown menu on the lower left side of the main WSJT-X application panel. -->
-
-<!-- 3. Check computer clock accuracy -->
-
-<!-- Open a browser; visit https://time.is -->
-
-<!-- If your time synch is within .5s of the correct time, you may proceed. -->
-
-<!-- If you have a cellular hotspot, you may wish to connect it to the hub.  -->
-<!-- Power the hub, wait for the computers to establish an internet connection, and allow the Meinberg time server application to update the time. -->
-
-<!-- If you are decoding signals, then all is well. -->
+You may need to download the specific log for the contest you want to work.
 
 #### On the IC-7610
 
@@ -74,17 +40,30 @@ knitr::opts_chunk$set(echo = TRUE)
 
 To change the mode, press the mode indicator on the touch screen to open a window to toggle the mode (USB/LSB).
 
+```{r}
+knitr::include_graphics("img/ic-7610-chg-mode.png")
+```
+
+Remember, the convention is to use LSB below 10 MHz except for 60m.
+
 2. Set your bandwidth by pressing the FILTER button located on the right side of the front panel.
 
 You may adjust the filter settings by pressing and holding the filter button on the right side of the rig control panel. Press and hold the FILTER button on to save and apply the filter settings.
 
-2. Check audio output levels
-Turn AGC off
-; NR and NB off; Preamp off.
+```{r}
+knitr::include_graphics("img/ic-7610-filter.png")
+```
+
+2. Check audio output levels.
 
 3. Set desired power output using MULTI knob.
 
-Remember, WSJT-X is a weak signal mode. Less than 50 W is plenty. 
+```{r}
+knitr::include_graphics("img/ic-7610-multi.png")
+```
+
+Press and hold the MULTI button to open a window on the touch/display screen.
+Press the RF POWER panel and rotate the MULTI button to set RF power.
 
 #### On KPA1500
 
