--- a/WSJT-X-IC-7610.Rmd
+++ b/WSJT-X-IC-7610.Rmd
@@ -6,10 +6,13 @@ output: html_document
 ---
 
 ```{r, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "6.5in")
 ```
 
-### WSJT-X on IC-7610
+### WSJT-X on IC-7610/NARC1
 
 The current installed version as of 2019-10-20 is v2.1.0.
 
