--- a/WSJT-X-K3S.Rmd
+++ b/WSJT-X-K3S.Rmd
@@ -5,7 +5,14 @@ date: "`r Sys.time()`"
 output: html_document
 ---
 
-### WSTJ-X on IC-7610
+```{r, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "6.5in")
+```
+
+### WSTJ-X on K3S/NARC2
 
 #### On the PC
 
