--- a/clubhouse-guide.Rmd
+++ b/clubhouse-guide.Rmd
@@ -12,6 +12,13 @@ output:
   pdf_document: default
 ---
 
+```{r, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "6.5in")
+```
+
 # Arrival procedures
 
 - Unlock the gate. Use the small key to unlock the padlock. The larger key opens the clubhouse itself. Take the padlock with you to the shack.
@@ -46,7 +53,9 @@ Please report any issues that need to be addressed.
 
 # Operating procedures
 
-## WSTJ-X
+## Digital modes
+
+### WSTJ-X
 
 ```{r wsjt-x-ic-7610, child='WSJT-X-IC-7610.Rmd'}
 ```
@@ -54,13 +63,17 @@ Please report any issues that need to be addressed.
 ```{r wstj-x-k3s, child='WSJT-X-K3S.Rmd'}
 ```
 
-## fldigi
+### fldigi
 
 ```{r fldigi-ic-7610, child='fldigi-IC-7610.Rmd'}
 ```
 
 ```{r fldigi-k3s, child='fldigi-K3S.Rmd'}
 ```
+
+### JS8Call
+
+Installed; guide forthcoming.
 
 ## Phone
 
