--- a/fldigi-K3S.Rmd
+++ b/fldigi-K3S.Rmd
@@ -6,10 +6,13 @@ output: html_document
 ---
 
 ```{r, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      out.width = "6.5in")
 ```
 
-### fldigi on the K3S
+### fldigi on the K3S/NARC2
 
 As of 2019-10-20, the installed version is 4.1.03.
 
