Fix img printing

--- a/IC-7610.Rmd
+++ b/IC-7610.Rmd
@@ -2,19 +2,21 @@
 title: "IC-7610"
 author: "Rick Gilmore K3ROG"
 date: "`r Sys.time()`"
-output: html_document
+output: 
+  html_document:
+    self_contained: true
 ---
 
 ```{r, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
                       message = FALSE,
                       fig.align = "center",
-                      out.width = "6.5in")
-````
+                      out.width = "600px")
+```
 
 ## IC-7610 HF Transceiver
 
-```{r, fig.cap=""}
+```{r, fig.cap="IC-7610"}
 knitr::include_graphics("img/ic-7610.jpg")
 ```
 
