--- a/WSJT-X-KPA1500.Rmd
+++ b/WSJT-X-KPA1500.Rmd
@@ -8,7 +8,7 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
                       message = FALSE,
                       fig.align = "center",
-                      out.width = "6.5in")
+                      out.width = "600px")
 ```
 
 1. For < 100W output, set amplifier to STBY mode (yellow light) by pressing the MODE button to toggle between STBY (yellow light) and OPER (green). 
