--- a/clubhouse-guide.Rmd
+++ b/clubhouse-guide.Rmd
@@ -16,7 +16,7 @@ output:
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
                       message = FALSE,
                       fig.align = "center",
-                      out.width = "6.5in")
+                      out.width = "600px")
 ```
 
 # Arrival procedures
