--- a/fldigi-IC-7610.Rmd
+++ b/fldigi-IC-7610.Rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
                       message = FALSE,
                       fig.align = "center",
-                      out.width = "6.5in")
+                      out.width = "600px")
 ```
 
 ### fldigi on IC-7610/NARC1
@@ -65,7 +65,6 @@ To change the mode, press the mode indicator on the touch screen to open a windo
 Unless you are sure that your digital mode uses LSB, select USB.
 Press and hold the DATA button to switch between D1, D2, and D3 data mode connectors. 
 D2 is configured for use via USB.
-
 
 2. Set your bandwidth to filter 1 (wide) by pressing the FILTER button located on the right side of the front panel.
 
