--- a/antennas.Rmd
+++ b/antennas.Rmd
@@ -31,7 +31,7 @@ knitr::include_graphics("img/60-ft-tower-west.jpg")
 knitr::include_graphics("img/80-ft-tower-middle.jpg")
 ```
 
-## 80` North Tower
+## 80' North Tower
 
 - 4 element triband (10, 15, 20m + WARC) Yagi
   - Rotor (out-of-service as of 2019-11-24) 
@@ -62,17 +62,17 @@ knitr::include_graphics("img/60-ft-tower-east.jpg")
     
 ## 40 m
 
-- Dipole (@ 60') oriented...
-- Dipole (@ 80') oriented NW/SE
+- ~~Dipole (@ 60' West Tower) oriented NW/SE~~
+- Dipole (@ 80' Middle Tower) oriented NW/SE
 
-## 80m 
+## 80m
 
 - CW cut
 - Phone (75m) cut
 
 ## 160m
 
-- Dipole on North tower oriented NW/SE
+- Dipole on 80' North tower oriented NW/SE
 
 # Antenna use
 
