--- a/2020-09-08-clubhouse-rpt.Rmd
+++ b/2020-09-08-clubhouse-rpt.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "NARC Clubhouse Report"
-subtitle: "September 2020"
+subtitle: "October 2020"
 author: "Rick Gilmore K3ROG"
 date: "`r Sys.time()`"
 css: css/ioslides.css
@@ -20,48 +20,14 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Recent activities
 
-- Work day (NK8Q, KC3FDD, N3LI, K3ROG) 
-  - removed Yagi from precarious position for disassembly
-  - installed cabinets on wall
-- N3LI installed countertop
-- N3LI installed IC-9100; updated digital software on IC-7610 & K3S
-- K0LO, N3LI, W3EDP, & K3ROG met about secure network project
+- Work day (K3ROG, N3LI, W3EDP, W0LO)
+  - Preparation for network installation
+  - Install new rack for equipment
+- K0LO & W3EDP
+  - Ordered and installed new network cabinet
+  - Awaiting new fiber optic connection replacement by N3EB
 
-## Equipment status
-
-```{r yagi-tilting, fig.align='center', out.height='500px'}
-knitr::include_graphics("img/yagi-tilting.jpeg")
-```
-
----
-
-```{r, fig.align='center', out.width='700px'}
-knitr::include_graphics("img/yagi-down.jpg")
-```
-
----
-
-```{r, fig.align='center', out.width='700px'}
-knitr::include_graphics("img/yagi-safe.jpg")
-```
-
----
-
-```{r, fig.align='center', out.width='700px'}
-knitr::include_graphics("img/cabinets-waiting-bottom.jpg")
-```
-
----
-
-```{r, fig.align='center', out.height='550px'}
-knitr::include_graphics("img/cabinets-waiting-countertop.jpg")
-```
-
----
-
-```{r, fig.align='center', out.height='550px'}
-knitr::include_graphics("img/clubhouse-kitchen.jpeg")
-```
+## Radio status
 
 ## NARC 1 (Icom IC-7610)
 
@@ -95,23 +61,30 @@ knitr::include_graphics("img/clubhouse-panorama.jpeg")
 
 ## Future work
 
-- ~~Finish cabinet installation~~
-- Install & test private network appliance with help from Mark K0LO
-- Peform antenna maintenance prior to contest season
-    - Repair 40m dipole (West 60' Tower)
-- Repair and reinstall multi-band Yagi on North 80'
+- In the shack
+    - Decide on wifi on/off mechanism and complete wifi installation (K0LO, W3EDP)
+    - Purchase additional shelves, bins (K3ROG)
+    - Update user guides and manuals (K3ROG)
+- Peform [antenna maintenance](antenna-status-2020-09-26.html) prior to contest season
+    - Repair and reinstall multi-band Yagi on North 80'
+    - Repair multi-band Yagi on East 60'
 
 ## Under consideration
 
 - Research rotators & controller replacements
+    - Goal: Computer-controlled rotation of antennas
 - Replace keyed lock with keyless
 - Run 2nd coax lines to NARC-1 and NARC-2 to take advantage of dual receivers in both rigs
-- Digital-only station (IC-9100?)
 - Replace PCs and monitors
+
+## Recent clubhouse use
+
+- October 3 • ARRL Simulated Emergency Test (SET), K3CWP, N3LI, K3ROG
+- October 10-11 • PA QSO Party, NK8Q
+- October 24-25 • CQ WWW DX SSB, NK8Q
 
 ## Future clubhouse use
 
-- October 3 • ARRL Simulated Emergency Test (SET)
 - November 7-9 • ARRL Sweepstakes CW
 - November 21-23 • ARRL Sweepstakes SSB
 - November 28-29 • CQ WW DX CW
