--- a/antennas.Rmd
+++ b/antennas.Rmd
@@ -9,6 +9,14 @@ output:
     toc_float: true
 ---
 
+```{r, include=FALSE}
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+                      message = FALSE,
+                      fig.align = "center",
+                      fig.width = 6.5,
+                      out.width = "75%")
+```
+
 # Towers
 
 ## 60' West Tower
