--- a/antennas.Rmd
+++ b/antennas.Rmd
@@ -10,7 +10,8 @@ output:
 ---
 
 ```{r, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, warning = FALSE, 
+knitr::opts_chunk$set(echo = FALSE, 
+                      warning = FALSE, 
                       message = FALSE,
                       fig.align = "center",
                       fig.width = 6.5,
