--- a/2021-03-23-clubhouse-rpt.Rmd
+++ b/2021-03-23-clubhouse-rpt.Rmd
@@ -70,23 +70,28 @@ knitr::include_graphics("img/narc-1-new-computer.jpeg")
   
 ## Spring/Fall 2021 work-day projects
 
-- Full equipment inventory (shack, attic, shed)
+- Full [equipment inventory](https://docs.google.com/spreadsheets/d/1J_zTmty3JlsgPIf_KGFJ72rzpGeRJSGKMHn6ZnMDEuE/edit?usp=sharing) (shack, attic, shed)
     - Discard/sell unused items
     - **BEFORE Field Day 2021**
 - Wall of Fame for plaques
 - Install large-scale monitor (w/ Hamclock, PSKreporter, etc. windows on Raspberry Pi)
     - NK8K donation of TV.
+    
+---
+    
 - Dipole maintenance
     - Retune 40m dipole for CW/digital portion
     - Reposition 40m dipoles for better geographic coverage
+- Repainting exterior?
+- Better ventilation in shed
 
 ## Under consideration
 
 - Replace/upgrade packet station
     - Replacing PC
     - Consider new TNC- or computer-based option (direwolf)
-- Member survey about interests in and usage of clubhouse
 - Satellite antenna assembly/installation
+- Member [survey](https://forms.gle/HXyJcJuCy1tJDGNQ8) about interests in and usage of clubhouse
 
 ---
 
